2009-02-06  Martin Olsson  <mnemo@minimum.se>

	* src/ghex-window.c:
	(ghex_window_update_status_message): Fix an off-by-one error in reporting
	the number of bytes selected in the status bar.
	* src/gtkhex.c:
	(gtk_hex_set_cursor): emit the 'cursor-moved' signal later to fix broken
	reporting of selection range when selecting text with the keyboard

2009-01-27  Pacho Ramos  <pacho@condmat1.ciencias.uniovi.es>

	* ghex.desktop.in: Bug #568023: provided desktop files don't follow
	freedesktop spec

2009-01-26  Martin Olsson  <mnemo@minimum.se>

	* src/ghex-window.c:
	* src/gtkhex.c:
	(gtk_hex_key_press):
	* src/hex-document.c:
	Bug #564375 - patch that removes unused variables in ghex.

2009-01-26  Martin Olsson  <mnemo@minimum.se>

	* src/hex-dialog.c:
	(hex_dialog_getview): Bug #564371 - ghex2 prints g_warning on startup because
	it uses a deprecated API (GtkAdjustment page_size being non-zero.

2008-04-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: post-release bump to 2.23.0 for trunk

2008-04-06  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/ui.c: Update the About Dialog to use the application icon.  In the
	process, I ported the code from GnomeAbout to GtkAboutDialog.
	Fixes Bug #520983

2008-04-05  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/gtkhex.c: fix a bug where the selection would always start at 0 if
	the user only used the keyboard.  To reproduce, navigate away from the start
	of the document, then press Shift+Down, and the text will be selected, but
	instead of starting the selection from where the cursor was when you pressed
	Down, it would start from the beginning of the file.

2008-04-09  Jonathon Jongsma  <jjongsma@gnome.org>
i
	* src/gtkhex.c (draw_shadow, gtk_hex_size_allocate): Fix the allocation code
	to allocate the child widgets relative to the GtkHex allocation.x and
	allocation.y coordinates instead of (0,0).  Fixes Bug #527272

2008-04-12  Jonathon Jongsma  <jjongsma@gnome.org>
